Ticket #15073 (closed defect: fixed)

Opened 3 months ago

Last modified 3 months ago

wxSTC component doesn't accept numpad keys under OS X

Reported by: paulclinger Owned by:
Priority: normal Milestone:
Component: wxStyledText Version: 2.9-svn
Keywords: Cc: artlogic@…
Blocked By: Patch: no
Blocking:

Description

Can be seen with samples/stc/stctest application. None of the numpad keys generate any input in the application (except Enter). This works correctly with 2.8.12 and with 2.9-svn on Windows.

Other components in the same application work as expected.

Change History

Changed 3 months ago by vadz

Is this under OS X?

Changed 3 months ago by artlogic

  • cc artlogic@… added

I can confirm I've also experienced this on OS X, though I haven't had a chance to test it thoroughly yet.

Changed 3 months ago by paulclinger

Yes, this is on OSX (10.7.4).

Changed 3 months ago by vadz

  • summary changed from wxSTC component doesn't accept numpad keys to wxSTC component doesn't accept numpad keys under OS X

Changed 3 months ago by SC

  • status changed from new to closed
  • resolution set to fixed

(In [73597]) issue NUMPAD constants only for Key but not for Char events, fixes #15073

Note: See TracTickets for help on using tickets.